--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "One-Focus",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Minimal plugin helping you focus in one task per time from wunderlist accompanied with beautiful backgrounds",
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -17,7 +17,7 @@
     "start": "npm run watch & nodemon",
     "build": "npm run build:html | npm run build:css | npm run build:js",
     "build:html": "pug -o dist/ html/index.pug",
-    "build:css": "uglifycss css/main.css > dist/main.css",
+    "build:css": "uglifycss css/main.css node_modules/bootstrap/dist/css/bootstrap.min.css > dist/main.css",
     "build:js": "browserify js/main.js -o dist/bundle.js",
     "build:watch": "watch 'npm run build' .",
     "test": "echo \"Error: no test specified\" && exit 1"
