--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "One-Focus",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Minimal plugin helping you focus in one task per time from wunderlist accompanied with beautiful backgrounds",
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -17,9 +17,9 @@
     "start": "npm run watch & nodemon",
     "build": "npm run build:html | npm run build:css | npm run build:js",
     "build:html": "pug -o dist/ html/index.pug",
-    "build:css": "cp node_modules/bootstrap/dist/css/bootstrap.min.css dist/bootstrap.min.css ; uglifycss dist/bootstrap.min.css css/main.css > dist/main.css",
+    "build:css": "cp node_modules/bootstrap/dist/css/bootstrap.min.css dist/bootstrap.min.css ; uglifycss css/main.css dist/bootstrap.min.css  > dist/main.css",
     "build:js": "browserify js/main.js -o dist/bundle.js",
-    "build:watch": "watch 'npm run build' .",
+    "build:watch": "watch 'npm run build:js' .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
